# pwned-passwords-django

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  docs_settings.py  exceptions.rst  faq.rst  index.rst  install.rst  make.bat  middleware.rst  settings.rst  spelling_wordlist.txt  validator.rst
pwned_passwords_django/: api.py  middleware.py  runtests.py  validators.py
pwned_passwords_django/tests/: base.py  test_api.py  test_middleware.py  test_validators.py  urls.py
src/pwned_passwords_django/: __init__.py  api.py  exceptions.py  middleware.py  validators.py
tests/: base.py  settings.py  test_api.py  test_middleware.py  test_validators.py  urls.py
