[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "James Bennett", email = "james@b-list.org"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
name = "pwned-passwords-django"
description = "A Pwned Passwords implementation for Django sites."
dependencies = [
  "Django>=3.2",
  "requests"
]
dynamic = ["version"]
keywords = ["django", "security", "passwords", "auth", "authentication"]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
documentation = "https://pwned-passwords-django.readthedocs.io/"
homepage = "https://github.com/ubernostrum/pwned-passwords-django"

[tool.bandit]
skips = ["B101"]

[tool.black]
target-version = ["py37"]

[tool.coverage.report]
fail_under = 100

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "pwned_passwords_django.__version__"}
